--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <div class="container align-items-center justify-content-center">
+    <div class="container align-items-center justify-content-center  ">
         <div class="row">
             <article class="col-12 bg-black p-4"></article>
         </div>
@@ -54,6 +54,9 @@
                         <div class="col-6 bg-green p-5"></div>
                         <div class="col-6 bg-yellow p-5"></div>
                         <div class="col-6 bg-green p-5"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 bg-black p-5"></div>
                     </div>
         </div>
     </article>
