--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     
-    <div class="container align-items-center justify-content-center  ">
+    <div class="container-fluid align-items-center justify-content-center  ">
         <div class="row justify-content-center ">
             <article class="col-12 bg-black p-3"></article>
         </div>
         <div class="row justify-content-center ">
+            <article class="col-12 bg-yellow p-5"></article>
             <article class="col-12 bg-yellow p-5"></article>
         </div>
         <div class="row justify-content-center ">
@@ -54,6 +55,9 @@
                         <div class="col-6 bg-green p-5"></div>
                         <div class="col-6 bg-yellow p-5"></div>
                         <div class="col-6 bg-green p-5"></div>
+                        <div class="col-6 bg-yellow p-5"></div>
+                        <div class="col-6 bg-green p-5"></div>
+                        
                     </div>
                     <div class="row justify-content-center ">
                         <div class="col-12 bg-black p-5"></div>
